--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -3,10 +3,13 @@
   "version": "1.0.0",
   "description": "Client library for Mocky Balboa to interact with the WebSocket server for real-time network mocking in your test suites.",
   "type": "module",
-  "homepage": "https://mockybalboa.com",
+  "homepage": "https://docs.mockybalboa.com",
+  "bugs": {
+    "url": "https://github.com/mocky-balboa/mocky-balboa/issues"
+  },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/mocky-balboa/monorepo.git",
+    "url": "git+https://github.com/mocky-balboa/mocky-balboa.git",
     "directory": "packages/client"
   },
   "keywords": [
