--- a/packages/next-js/package.json
+++ b/packages/next-js/package.json
@@ -3,10 +3,13 @@
   "version": "1.0.0",
   "description": "Next.js integration for Mocky Balboa. Mock your server-side network requests in your test suites.",
   "type": "module",
-  "homepage": "https://mockybalboa.com",
+  "homepage": "https://docs.mockybalboa.com",
+  "bugs": {
+    "url": "https://github.com/mocky-balboa/mocky-balboa/issues"
+  },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/mocky-balboa/monorepo.git",
+    "url": "git+https://github.com/mocky-balboa/mocky-balboa.git",
     "directory": "packages/next-js"
   },
   "keywords": [
