--- a/packages/playwright/package.json
+++ b/packages/playwright/package.json
@@ -3,10 +3,13 @@
   "version": "1.0.0",
   "description": "Playwright integration for Mocky Balboa. Mock your server-side network requests directly inside your Playwright tests.",
   "type": "module",
-  "homepage": "https://mockybalboa.com",
+  "homepage": "https://docs.mockybalboa.com",
+  "bugs": {
+    "url": "https://github.com/mocky-balboa/mocky-balboa/issues"
+  },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/mocky-balboa/monorepo.git",
+    "url": "git+https://github.com/mocky-balboa/mocky-balboa.git",
     "directory": "packages/playwright"
   },
   "keywords": [
@@ -42,8 +45,6 @@
   "dependencies": {
     "@mocky-balboa/client": "workspace:*",
     "@mocky-balboa/logger": "workspace:*",
-    "@mocky-balboa/shared-config": "workspace:*",
-    "@mocky-balboa/websocket-messages": "workspace:*",
     "pino": "catalog:",
     "pino-pretty": "catalog:"
   },
