--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -3,10 +3,13 @@
   "version": "1.0.0",
   "description": "Server library for Mocky Balboa to enable real-time network mocking for your server-side network requests in your browser based test suites via WebSockets.",
   "type": "module",
-  "homepage": "https://mockybalboa.com",
+  "homepage": "https://docs.mockybalboa.com",
+  "bugs": {
+    "url": "https://github.com/mocky-balboa/mocky-balboa/issues"
+  },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/mocky-balboa/monorepo.git",
+    "url": "git+https://github.com/mocky-balboa/mocky-balboa.git",
     "directory": "packages/client"
   },
   "keywords": [
