--- a/sites/docs.mockybalboa.com/package.json
+++ b/sites/docs.mockybalboa.com/package.json
@@ -15,10 +15,12 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "docusaurus-lunr-search": "^3.6.0",
     "@docusaurus/core": "3.8.1",
     "@docusaurus/preset-classic": "3.8.1",
     "@mdx-js/react": "^3.0.0",
     "clsx": "^2.0.0",
+    "lunr": "^2.3.9",
     "prism-react-renderer": "^2.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
@@ -27,6 +29,7 @@
     "@docusaurus/module-type-aliases": "3.8.1",
     "@docusaurus/tsconfig": "3.8.1",
     "@docusaurus/types": "3.8.1",
+    "@types/lunr": "^2.3.7",
     "typescript": "~5.6.2"
   },
   "browserslist": {
