--- a/package.json
+++ b/package.json
@@ -10,12 +10,19 @@
     "build:packages": "pnpm --filter \"./packages/*\" build",
     "build:packages-watch": "pnpm --filter \"./packages/*\" --parallel build:watch",
     "lint": "oxlint",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test:packages": "pnpm --filter \"./packages/*\" test"
   },
   "keywords": [],
   "license": "MIT",
   "packageManager": "pnpm@10.14.0",
   "devDependencies": {
+    "@commitlint/cli": "^19.8.1",
     "oxlint": "^1.11.2"
+  },
+  "dependencies": {
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/npm": "^12.0.2",
+    "semantic-release": "^24.2.7"
   }
 }
