--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -40,6 +40,7 @@
     "build": "pnpm clean && pnpm run build:esm && pnpm run build:cjs",
     "build:watch": "concurrently \"pnpm run build:esm --watch\" \"pnpm run build:cjs --watch\"",
     "clean": "rimraf dist",
+    "release": "semantic-release",
     "test": "vitest"
   },
   "dependencies": {
