--- a/.github/actions/find-examples/action.yml
+++ b/.github/actions/find-examples/action.yml
@@ -14,5 +14,5 @@ runs:
       id: get-examples
       run: |
         # Find all directories in the examples folder and format as JSON
-        DIRECTORIES=$(find ./examples -mindepth 1 -maxdepth 1 -type d -printf '%P\n' | jq -R . | jq -s .)
+        DIRECTORIES=$(find ./examples -mindepth 1 -maxdepth 1 -type d -print | sed "s|./examples/||" | jq -R . | jq -s .)
         echo "directories=$DIRECTORIES" >> $GITHUB_OUTPUT
