--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,7 +56,11 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Finds examples
-        uses: ./.github/actions/find-examples
+        run: |
+          DIRECTORIES=$(find ./examples -mindepth 1 -maxdepth 1 -type d -print | sed "s|./examples/||" | jq -R . | jq -s . | tr -d '\n')
+          echo "directories<<EOF" >> $GITHUB_OUTPUT
+          echo "$DIRECTORIES" >> $GITHUB_OUTPUT
+          echo "EOF" >> $GITHUB_OUTPUT
 
   examples_playwright_tests:
     name: 🎭 Run Playwright tests for examples
