--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,7 @@ jobs:
 
   lint:
     name: 💅 Lint
+    needs: validate_commits
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
@@ -34,6 +35,7 @@ jobs:
 
   package_tests:
     name: 🧪 Run package tests
+    needs: validate_commits
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
@@ -50,6 +52,7 @@ jobs:
 
   find_examples:
     name: 🔎 Find examples
+    needs: validate_commits
     runs-on: ubuntu-latest
     outputs:
       examples: ${{ steps.finds-examples.outputs.examples }}
@@ -126,7 +129,6 @@ jobs:
     name: Release packages
     runs-on: ubuntu-latest
     needs:
-      - validate_commits
       - lint
       - package_tests
       - examples_playwright_tests
