--- a/packages/playwright/tsconfig.build.cjs.json
+++ b/packages/playwright/tsconfig.build.cjs.json
@@ -1,5 +1,5 @@
 {
-  "extends": "./tsconfig.build.json",
+  "extends": "./tsconfig.build.esm.json",
   "compilerOptions": {
     "module": "CommonJS",
     "outDir": "./dist/cjs",
