--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -4,9 +4,12 @@ packages:
   - examples/*
 
 catalog:
+  "@swc/cli": "^0.7.8"
+  "@swc/core": "^1.13.4"
   "@types/express": ^5.0.3
   "@types/node": 24.3.0
   "@types/ws": ^8.18.1
+  chokidar-cli: "^3.0.0"
   concurrently: ^9.2.0
   express: ^5.1.0
   get-port: ^7.1.0
