feat: support for using files for responses

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -59,6 +59,7 @@
     "@mocky-balboa/logger": "workspace:*",
     "@mocky-balboa/shared-config": "workspace:*",
     "@mocky-balboa/websocket-messages": "workspace:*",
+    "mime-types": "^3.0.1",
     "msw": "^2.10.5",
     "pino": "catalog:",
     "pino-pretty": "catalog:",
@@ -70,6 +71,7 @@
     "@swc/core": "catalog:",
     "chokidar-cli": "catalog:",
     "@types/express": "catalog:",
+    "@types/mime-types": "^3.0.1",
     "@types/node": "catalog:",
     "@types/ws": "catalog:",
     "concurrently": "catalog:",
