--- a/examples/next-js-14/package.json
+++ b/examples/next-js-14/package.json
@@ -7,8 +7,9 @@
     "build": "next build",
     "start": "next start -p 3000",
     "lint": "next lint",
+    "test:cypress": "pnpm cypress run",
     "test:playwright": "pnpm playwright test",
-    "start:tests": "mocky-balboa-next-js",
+    "start:tests": "mocky-balboa-next-js -h 0.0.0.0",
     "start:tests-dev": "pnpm start:tests --dev"
   },
   "dependencies": {
@@ -17,9 +18,11 @@
     "next": "14.2.32"
   },
   "devDependencies": {
+    "@mocky-balboa/cypress": "workspace:*",
     "@mocky-balboa/playwright": "workspace:*",
     "@mocky-balboa/next-js": "workspace:*",
     "@playwright/test": "^1.54.2",
+    "cypress": "^14.5.4",
     "playwright": "^1.54.2",
     "detect-port": "^2.1.0",
     "get-port": "^7.1.0",
