--- a/examples/next-js-15/package.json
+++ b/examples/next-js-15/package.json
@@ -7,8 +7,9 @@
     "build": "next build",
     "start": "next start -p 3000",
     "lint": "next lint",
+    "test:cypress": "pnpm cypress run",
     "test:playwright": "pnpm playwright test",
-    "start:tests": "mocky-balboa-next-js",
+    "start:tests": "mocky-balboa-next-js -h 0.0.0.0",
     "start:tests-dev": "pnpm start:tests --dev"
   },
   "dependencies": {
@@ -17,9 +18,11 @@
     "next": "15.4.7"
   },
   "devDependencies": {
+    "@mocky-balboa/cypress": "workspace:*",
     "@mocky-balboa/playwright": "workspace:*",
     "@playwright/test": "^1.54.2",
     "typescript": "catalog:",
+    "cypress": "^15.0.0",
     "@types/node": "catalog:",
     "@types/react": "^19",
     "@types/react-dom": "^19",
