feat: github workflow separate playwright and cypress

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -64,12 +64,12 @@ jobs:
         id: finds-examples
         uses: ./.github/actions/find-examples
 
-  examples_tests:
-    name: ➿ Run tests for examples
+  examples_playwright_tests:
+    name: 🎭 Run Playwright tests for examples
     runs-on: ubuntu-latest
     needs: find_examples
     strategy:
-      fail-fast: false
+      fail-fast: true
       matrix:
         example: ${{ fromJson(needs.find_examples.outputs.examples) }}
     steps:
@@ -108,7 +108,9 @@ jobs:
 
       - name: Get installed Playwright version
         id: playwright-version
-        run: echo "pnpm --filter \"./examples/${{ matrix.example }}\" exec playwright --version"
+        run: |
+          VERSION=$(pnpm --filter \"./examples/${{ matrix.example }}\" exec playwright --version)
+          echo "version=$VERSION" >> $GITHUB_OUTPUT
 
       - uses: actions/cache@v3
         id: playwright-cache
@@ -125,10 +127,53 @@ jobs:
       - name: Run Playwright tests for ${{ matrix.example }}
         run: pnpm --filter "./examples/${{ matrix.example }}" test:playwright
 
+  examples_cypress_tests:
+    name: 🌴 Run Cypress tests for examples
+    runs-on: ubuntu-latest
+    needs: find_examples
+    strategy:
+      fail-fast: true
+      matrix:
+        example: ${{ fromJson(needs.find_examples.outputs.examples) }}
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+
+      - name: Setup monorepo
+        uses: ./.github/actions/setup-monorepo
+
+      - name: Build packages
+        shell: bash
+        run: pnpm build:packages
+
+      # Need to run "pnpm install" after build to link the CLI to .bin
+      - name: pnpm install
+        uses: ./.github/actions/pnpm-install
+
+      - name: Build example
+        shell: bash
+        run: pnpm --filter "./examples/${{ matrix.example }}" build
+
+      - name: Serve example
+        shell: bash
+        run: pnpm --filter "./examples/${{ matrix.example }}" start:tests &
+
+      - name: Wait for server to be ready
+        run: |
+          for i in $(seq 1 20); do
+            curl -f http://localhost:3000 > /dev/null && break
+            echo "Waiting for server to be available..."
+            sleep 1
+          done
+
+          # Check if the loop finished without success
+          curl -f http://localhost:3000 > /dev/null || (echo "Server is not available after 20 seconds" && exit 1)
+
       - name: Get installed Cypress version
         id: cypress-version
         run: |
-          echo "pnpm --filter \"./examples/${{ matrix.example }}\" exec cypress --version | grep \"Cypress package version:\" | sed 's/Cypress package version: //g'"
+          VERSION=$(pnpm --filter \"./examples/${{ matrix.example }}\" exec cypress --version | grep \"Cypress package version:\" | sed 's/Cypress package version: //g')
+          echo "version=$VERSION" >> $GITHUB_OUTPUT
 
       - uses: actions/cache@v3
         id: cypress-cache
@@ -151,7 +196,8 @@ jobs:
     needs:
       - lint
       - package_tests
-      - examples_tests
+      - examples_playwright_tests
+      - examples_cypress_tests
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
