--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -157,7 +157,7 @@ jobs:
         run: pnpm --filter "./examples/${{ matrix.example }}" test:cypress
 
   deploy:
-    name: Release packages
+    name: 🚀 Release packages
     runs-on: ubuntu-latest
     needs:
       - lint
