--- a/examples/next-js-15/package.json
+++ b/examples/next-js-15/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "build:tests": "pnpm build",
     "start": "next start -p 3000",
     "lint": "next lint",
     "test:cypress": "pnpm cypress run",
