--- a/examples/nuxt-4/package.json
+++ b/examples/nuxt-4/package.json
@@ -12,18 +12,23 @@
     "test:cypress": "pnpm cypress run",
     "test:playwright": "pnpm playwright test",
     "start:tests": "pnpm serve",
-    "start:tests-dev": "pENABLE_MOCKY_BALBOA=true npm dev"
+    "start:tests-dev": "ENABLE_MOCKY_BALBOA=true pnpm dev --host 0.0.0.0"
   },
   "dependencies": {
+    "@nuxtjs/tailwindcss": "^6.14.0",
+    "@primeuix/themes": "^1.2.3",
     "nuxt": "^4.0.3",
+    "primevue": "^4.3.7",
+    "tailwindcss-primeui": "^0.6.1",
     "vue": "^3.5.19",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
-    "@mocky-balboa/nuxt": "workspace:*",
-    "@playwright/test": "^1.54.2",
     "@mocky-balboa/cypress": "workspace:*",
+    "@mocky-balboa/nuxt": "workspace:*",
     "@mocky-balboa/playwright": "workspace:*",
+    "@playwright/test": "^1.54.2",
+    "@primevue/nuxt-module": "^4.3.7",
     "cypress": "^15.0.0",
     "playwright": "^1.54.2"
   }
