--- a/packages/nuxt/package.json
+++ b/packages/nuxt/package.json
@@ -30,9 +30,6 @@
   "packageManager": "pnpm@10.14.0",
   "main": "./dist/cjs/nuxt.cjs",
   "types": "./dist/cjs/nuxt.d.ts",
-  "bin": {
-    "mocky-balboa-nuxt": "./dist/esm/cli.js"
-  },
   "exports": {
     ".": {
       "import": {
@@ -75,9 +72,7 @@
     "@mocky-balboa/shared-config": "workspace:*",
     "@nuxt/kit": "^4.0.3",
     "commander": "^14.0.0",
-    "jiti": "^2.5.1",
-    "pino": "catalog:",
-    "pino-pretty": "catalog:"
+    "jiti": "^2.5.1"
   },
   "peerDependencies": {
     "h3": ">=1.0.0",
