--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -79,11 +79,15 @@
     "@swc/core": "catalog:",
     "chokidar-cli": "catalog:",
     "@types/express": "catalog:",
+    "@types/koa": "catalog:",
     "@types/mime-types": "^3.0.1",
     "@types/node": "catalog:",
     "@types/ws": "catalog:",
     "concurrently": "catalog:",
     "express": "catalog:",
+    "fastify": "catalog:",
+    "@fastify/express": "catalog:",
+    "koa": "catalog:",
     "get-port": "catalog:",
     "rimraf": "catalog:",
     "typescript": "catalog:",
